# FuelGauge

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: CI-build.yml
PICFuelGauge.X/: FuelGauge.mc3  Makefile  main.c  pichal.c
PICFuelGauge.X/mcc_generated_files/: adc.c  adc.h  device_config.c  device_config.h  epwm.c  epwm.h  eusart.c  eusart.h  fvr.c  fvr.h  mcc.c  mcc.h  memory.c  memory.h  pin_manager.c  pin_manager.h  tmr2.c  tmr2.h
PICFuelGauge.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
PICFuelGauge.X/nbproject/private/: SuppressibleMessageMemo.properties  private.xml
demo/: CMakeLists.txt  demo.cpp
docs/: BOM.md  ultima-fuel-tank.FCStd  user-guide.md
hardware/: FuelGauge-cache.lib  FuelGauge.kicad_pcb  FuelGauge.pro  FuelGauge.sch
hardware/gerbers/: FuelGauge-B_Cu.gbr  FuelGauge-B_Mask.gbr  FuelGauge-Edge_Cuts.gbr  FuelGauge-F_Cu.gbr  FuelGauge-F_Mask.gbr  FuelGauge-F_SilkS.gbr  FuelGauge-NPTH.drl  FuelGauge-PTH.drl
lib/: CMakeLists.txt  command.c  command.h  hal.h  mapper.c  mapper.h
test/: CMakeLists.txt  CommandTest.cpp  InputMapperTest.cpp  MapperTest.cpp
tools/ubuntu-devel/: Dockerfile  Ubuntu-Development.md
wiring/: wiring-cache.lib  wiring.sch
